@@ -25,9 +25,6 @@
  */
 package org.jastadd.tinytemplate.fragment;
 
-import java.io.PrintStream;
-
-import org.jastadd.tinytemplate.Indentation;
 import org.jastadd.tinytemplate.TemplateContext;
 
 /**
@@ -36,7 +33,7 @@ import org.jastadd.tinytemplate.TemplateContext;
  */
 public class AttributeReference extends NestedIndentationFragment {
 
-	private final String attribute;
+	protected final String attribute;
 
 	/**
 	 * @param attributeName
@@ -59,10 +56,5 @@ public class AttributeReference extends NestedIndentationFragment {
 	@Override
 	public boolean isKeyword(String varName) {
 		return attribute.equals(varName);
-	}
-
-	@Override
-	public void printAspectCode(Indentation ind, int lvl, PrintStream out) {
-		out.println(ind.get(lvl) + "out.print(" + attribute + "());");
 	}
 }
