@@ -26,9 +26,6 @@
  */
 package org.jastadd.tinytemplate.fragment;
 
-import java.io.PrintStream;
-
-import org.jastadd.tinytemplate.Indentation;
 import org.jastadd.tinytemplate.TemplateContext;
 import org.jastadd.tinytemplate.TemplateExpansionWarning;
 import org.jastadd.tinytemplate.TemplateParser.SyntaxError;
@@ -38,9 +35,9 @@ import org.jastadd.tinytemplate.TemplateParser.SyntaxError;
  * @author Niklas Fors <niklas.fors@cs.lth.se>
  */
 public class Concat extends NestedIndentationFragment {
-	private String iterable;
-	private final String sep;
-	private boolean isAttribute;
+	protected String iterable;
+	protected final String sep;
+	protected boolean isAttribute;
 
 	/**
 	 * @param iterable
@@ -123,43 +120,4 @@ public class Concat extends NestedIndentationFragment {
 		return true;
 	}
 
-	@Override
-	public void printAspectCode(Indentation ind, int lvl, PrintStream out) {
-		out.println(ind.get(lvl++) + "{");
-		if (!sep.isEmpty()) {
-			out.println(ind.get(lvl) + "boolean first = true;");
-		}
-		out.print(ind.get(lvl++) + "for (PrettyPrintable p: ");
-		if (isAttribute) {
-			out.print(iterable + "()");
-		} else {
-			out.print("get" + iterable + "()");
-		}
-		out.println(") {");
-		if (!sep.isEmpty()) {
-			out.println(ind.get(lvl++) + "if (!first) {");
-			StringBuilder buf = new StringBuilder();
-			for (int i = 0; i < sep.length(); ++i) {
-				if ((i+1) < sep.length() && sep.charAt(i) == '\\' &&
-						sep.charAt(i+1) == 'n') {
-					i += 1;
-					if (buf.length() > 0) {
-						out.println(ind.get(lvl) + "out.print(\"" + buf.toString() + "\");");
-					}
-					out.println(ind.get(lvl) + "out.println();");
-					buf.setLength(0);
-				} else {
-					buf.append(sep.charAt(i));
-				}
-			}
-			if (buf.length() > 0) {
-				out.println(ind.get(lvl) + "out.print(\"" + buf.toString() + "\");");
-			}
-			out.println(ind.get(--lvl) + "}");
-			out.println(ind.get(lvl) + "first = false;");
-		}
-		out.println(ind.get(lvl) + "out.print(p);");
-		out.println(ind.get(--lvl) + "}");
-		out.println(ind.get(--lvl) + "}");
-	}
 }
