@@ -25,9 +25,6 @@
  */
 package org.jastadd.tinytemplate.fragment;
 
-import java.io.PrintStream;
-
-import org.jastadd.tinytemplate.Indentation;
 import org.jastadd.tinytemplate.TemplateContext;
 
 /**
@@ -46,7 +43,7 @@ public class NewlineFragment extends AbstractFragment {
 	 */
 	public static Fragment INSTANCE = new NewlineFragment();
 
-	private NewlineFragment() {}
+	protected NewlineFragment() {}
 
 	@Override
 	public void expand(TemplateContext context, StringBuilder out) {
@@ -68,8 +65,4 @@ public class NewlineFragment extends AbstractFragment {
 		return true;
 	}
 
-	@Override
-	public void printAspectCode(Indentation ind, int lvl, PrintStream out) {
-		out.println(ind.get(lvl) + "out.println();");
-	}
 }
