@@ -1,5 +1,8 @@
 1.4 - TBD
 
+    * Removed aspect generation code from tinytemplate. This has moved
+    to a separate project.
+    * Template parsing can now use a builder to create the template AST.
     * When parsing single template declarations the leading and trailing
     whitespace is not trimmed.
 
